# feeds

./: .dockerignore  .env.example  .gitignore  README.md  db.sqlite  docker-compose-local.yml  docker-compose.yml  manage.py  pyproject.toml
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  pre_prod.py  test.py
docker/: Dockerfile  docker-compose-local.yml
docker/envs/: .django  .postgres
docker/envs/local/: .postgres
docker/scripts/: celery.sh  celery_beat.sh  entrypoint.sh  flower.sh  start.sh  test.sh
docs/postman/: SendCloud Feeds.postman_collection.json  SendCloud.postman_environment.json
feeds_for_sendcloud/feeds/: admin.py  apps.py  exceptions.py  managers.py  models.py  tasks.py
feeds_for_sendcloud/feeds/api/: filters.py  serializers.py  views.py
feeds_for_sendcloud/feeds/management/commands/: create_user_feeds_for_testing_purpose.py
feeds_for_sendcloud/feeds/migrations/: 0001_initial.py  0002_alter_feed_followers_alter_feed_source_err.py
feeds_for_sendcloud/templates/: base.html
feeds_for_sendcloud/users/: admin.py  apps.py  models.py
feeds_for_sendcloud/users/api/: serializers.py
feeds_for_sendcloud/users/management/commands/: pass_base64.py
feeds_for_sendcloud/users/migrations/: 0001_initial.py
feeds_for_sendcloud/utils/: rss.py  task_retries.py
tests/: conftest.py
tests/api/feeds/: test_feeds.py  test_posts.py
tests/factories/: feeds.py  users.py
tests/unit/feeds/: test_models.py  test_tasks.py
tests/unit/users/: test_models.py
tests/unit/utils/: test_task_retries.py
